[package]
name = "oxidar-ls"
version = "0.1.0"
authors = [
    "Alejandro <aleiton1993@gmail.com>",
    "Hernan <contact@hernan.rs>",
    "Nicolas <nicolas.antinori.7@gmail.com>",
]
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.3"
thiserror = "1.0"
clap = "4.5.20"

[dev-dependencies]
rstest = "0.23.0"

[lints.rust]
unsafe_code = "forbid"

[features]
stage0 = []
stage1 = []
stage2 = []
