[package]
name = "oxidar-ls"
version = "0.1.0"
authors = [
    "Alejandro <aleiton1993@gmail.com>",
    "Hernan <contact@hernan.rs>",
    "Nicolas <nicolas.antinori.7@gmail.com>",
]
edition = "2021"
description = "A tiny version of ls command"

[dependencies]
anyhow = "1.0"
bytes = "1.3"
clap = { version = "4.5.20", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
rstest = "0.23.0"

[lints.rust]
unsafe_code = "forbid"

[features]
stage0 = []
stage1 = ["stage0"]
stage2 = ["stage1"]
stage3 = ["stage2"]
stage4 = ["stage3"]
stage5 = ["stage4"]
